# Antigravity-Comptextv7

./: .gitignore  AGENTS.md  AGY_PROJECT.md  CI_RUST_VALIDATION_SNAPSHOT.md  DEMO_SPARK_EVIDENCE.md  LICENSING.md  NOTICE.md  PERFORMANCE_BASELINE.md  PHASE3A_CONTEXT_MODEL_SNAPSHOT.md  PHASE3B_CONTEXT_BUILD_HANDBOOK.md  PHASE3B_CONTEXT_BUILD_SNAPSHOT.md  PHASE3C_CONTEXT_RENDER_HANDBOOK.md  PHASE3C_CONTEXT_RENDER_SNAPSHOT.md  PHASE3D_CONTEXT_VALIDATE_HANDBOOK.md  PHASE3D_CONTEXT_VALIDATE_SNAPSHOT.md  PHASE3_CONTEXT_LAYER_FINAL_SNAPSHOT.md  PHASE3_CONTEXT_LAYER_PLAN.md  PHASE3_GITHUB_HANDOFF.md  PHASE4A_SPARKCTL_PLANNING_HANDBOOK.md  PHASE4B_SPARKCTL_DOCTOR_SNAPSHOT.md  PHASE4C_SPARKCTL_RUST_VALIDATE_HANDBOOK.md  PHASE4C_SPARKCTL_RUST_VALIDATE_SNAPSHOT.md  PHASE4D_SPARKCTL_CONTEXT_ALL_HANDBOOK.md  PHASE4D_SPARKCTL_CONTEXT_ALL_SNAPSHOT.md  PHASE4E_SPARKCTL_SPARK_DEMO_HANDBOOK.md  PHASE4E_SPARKCTL_SPARK_DEMO_SNAPSHOT.md  PHASE4F_SPARKCTL_HANDOFF_CHECK_HANDBOOK.md  PHASE4F_SPARKCTL_HANDOFF_CHECK_SNAPSHOT.md  PHASE4G_SPARKCTL_FINAL_ROLLUP_SNAPSHOT.md  PHASE5A_RELEASE_README_BRANDING_HANDBOOK.md  PHASE5B_RELEASE_README_BRANDING_SNAPSHOT.md  PHASE5C_BRANDING_ASSET_IMPORT_SNAPSHOT.md  PHASE5D_HUGGINGFACE_PAPER_PREP_SNAPSHOT.md  PHASE6A1_AGY_CT_AGENTIC_CLI_SKILLS_SNAPSHOT.md  PHASE6A_AGY_CT_AGENTIC_DETERMINISTIC_CLI_HANDBOOK.md  PHASE6A_AGY_CT_CLI_ARCHITECTURE_AUDIT_SNAPSHOT.md  PHASE6B_AGY_CT_BINARY_CLAP_TREE_AUDIT_SNAPSHOT.md  PHASE6B_AGY_CT_BINARY_CLAP_TREE_SNAPSHOT.md  PHASE6C_AGY_CT_COMPATIBILITY_WRAPPERS_AUDIT_SNAPSHOT.md  PHASE6C_AGY_CT_COMPATIBILITY_WRAPPERS_SNAPSHOT.md  (+14 more)
(+326 files in other folders)
